[package]
name = "tide"
version = "0.1.0"
authors = ["Vlady Veselinov <vladislav.veselinov@fanduel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.11"
async-std = { version = "1.6", features = ["attributes"] }